--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12494,3 +12494,16 @@ span mark {
 .family[data-v-fc9425ac] {
   letter-spacing: .3rem
 }
+
+.account-body {
+  visibility: hidden;
+  max-height: 0vh;
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.act-account-body {
+  visibility: visible;
+  max-height: 100vh;
+  opacity: 1;
+}
