--- a/static/css/sub.css
+++ b/static/css/sub.css
@@ -326,182 +326,182 @@ input[data-v-60ece38e] {
 
 
 
-.medium .ddaybox[data-v-715bec64] {
+.medium .ddaybox{
   max-height: 6rem;
   max-width: 5.3rem
 }
 
-.medium .colonmb[data-v-715bec64] {
+.medium .colonmb{
   margin-bottom: 1.3rem
 }
 
-.large .ddaybox[data-v-715bec64] {
+.large .ddaybox{
   max-height: 6.5rem;
   max-width: 5.8rem
 }
 
-.large .colonmb[data-v-715bec64] {
+.large .colonmb{
   margin-bottom: 1.7rem
 }
 
-.huge .ddaybox[data-v-715bec64] {
+.huge .ddaybox{
   max-height: 7rem;
   max-width: 6.3rem
 }
 
-.huge .colonmb[data-v-715bec64] {
+.huge .colonmb{
   margin-bottom: 2rem
 }
 
-.size4 .ddaybox[data-v-715bec64] {
+.size4 .ddaybox{
   max-height: 7.5rem;
   max-width: 6.8rem
 }
 
-.size4 .colonmb[data-v-715bec64] {
+.size4 .colonmb{
   margin-bottom: 2.2rem
 }
 
-.size5 .ddaybox[data-v-715bec64] {
+.size5 .ddaybox{
   max-height: 8rem;
   max-width: 7.3rem
 }
 
-.size5 .colonmb[data-v-715bec64] {
+.size5 .colonmb{
   margin-bottom: 2.6rem
 }
 
 
 
-.medium .cal-size[data-v-68d3ddd5] {
+.medium .cal-size{
   width: 34rem
 }
 
-.medium .cal-size-2[data-v-68d3ddd5] {
+.medium .cal-size-2{
   height: 3.75rem;
   width: 3.75rem
 }
 
-.medium .pad[data-v-68d3ddd5] {
+.medium .pad{
   padding: .75rem .5rem
 }
 
-.large .cal-size[data-v-68d3ddd5] {
+.large .cal-size{
   width: 35.5rem
 }
 
-.large .cal-size-2[data-v-68d3ddd5] {
+.large .cal-size-2{
   height: 4rem;
   width: 4rem
 }
 
-.large .pad[data-v-68d3ddd5] {
+.large .pad{
   padding: .875rem .5rem
 }
 
-.huge .cal-size[data-v-68d3ddd5] {
+.huge .cal-size{
   width: 37rem
 }
 
-.huge .cal-size-2[data-v-68d3ddd5] {
+.huge .cal-size-2{
   height: 4.25rem;
   width: 4.25rem
 }
 
-.huge .pad[data-v-68d3ddd5] {
+.huge .pad{
   padding: 1rem .5rem
 }
 
-.size4 .cal-size[data-v-68d3ddd5] {
+.size4 .cal-size{
   width: 38.5rem
 }
 
-.size4 .cal-size-2[data-v-68d3ddd5] {
+.size4 .cal-size-2{
   height: 4.5rem;
   width: 4.5rem
 }
 
-.size4 .pad[data-v-68d3ddd5] {
+.size4 .pad{
   padding: 1.125rem .5rem
 }
 
-.size5 .cal-size[data-v-68d3ddd5] {
+.size5 .cal-size{
   width: 40rem
 }
 
-.size5 .cal-size-2[data-v-68d3ddd5] {
+.size5 .cal-size-2{
   height: 4.75rem;
   width: 4.75rem
 }
 
-.size5 .pad[data-v-68d3ddd5] {
+.size5 .pad{
   padding: 1.25rem .5rem
 }
 
 
 
-.medium .cal-size[data-v-0848d54d] {
+.medium .cal-size{
   width: 34rem
 }
 
-.medium .cal-size-2[data-v-0848d54d] {
+.medium .cal-size-2{
   height: 3.75rem;
   width: 3.75rem
 }
 
-.medium .pad[data-v-0848d54d] {
+.medium .pad{
   padding: .75rem .5rem
 }
 
-.large .cal-size[data-v-0848d54d] {
+.large .cal-size{
   width: 35.5rem
 }
 
-.large .cal-size-2[data-v-0848d54d] {
+.large .cal-size-2 {
   height: 4rem;
   width: 4rem
 }
 
-.large .pad[data-v-0848d54d] {
+.large .pad{
   padding: .875rem .5rem
 }
 
-.huge .cal-size[data-v-0848d54d] {
+.huge .cal-size{
   width: 37rem
 }
 
-.huge .cal-size-2[data-v-0848d54d] {
+.huge .cal-size-2{
   height: 4.25rem;
   width: 4.25rem
 }
 
-.huge .pad[data-v-0848d54d] {
+.huge .pad{
   padding: 1rem .5rem
 }
 
-.size4 .cal-size[data-v-0848d54d] {
+.size4 .cal-size{
   width: 38.5rem
 }
 
-.size4 .cal-size-2[data-v-0848d54d] {
+.size4 .cal-size-2{
   height: 4.5rem;
   width: 4.5rem
 }
 
-.size4 .pad[data-v-0848d54d] {
+.size4 .pad{
   padding: 1.125rem .5rem
 }
 
-.size5 .cal-size[data-v-0848d54d] {
+.size5 .cal-size{
   width: 40rem
 }
 
-.size5 .cal-size-2[data-v-0848d54d] {
+.size5 .cal-size-2{
   height: 4.75rem;
   width: 4.75rem
 }
 
-.size5 .pad[data-v-0848d54d] {
+.size5 .pad{
   padding: 1.25rem .5rem
 }
 
